
[workspace]
members = ["zenoh-plugin-remote-api"]
resolver = "1"

[workspace.package]
version = "1.0.0-dev"
repository = "https://github.com/zettascalelabs/zenoh-ts"
homepage = "http://zenoh.io"
authors = [
    "Charles Schleich <charles.schleich@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming", "database"]
description = "Remote API Plugin for Zenoh using Websockets"
