#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = "1.75.0"
name = "zenoh-plugin-remote-api"
version = "1.0.0" # Zenoh version
repository = "https://github.com/zettascalelabs/zenoh-ts"
homepage = "http://zenoh.io"
authors = [
    "Charles Schleich",
    "Olivier Hécart <olivier.hecart@zettascale.tech>",
    "Luca Cominardi <luca.cominardi@zettascale.tech>",
    "Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = [
    "network-programming",
    "web-programming::http-server",
    "websocket",
]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []

[lib]
name = "zenoh_plugin_remote_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
tokio-rustls = { version = "0.26.0", default-features = false }
futures-util = "0.3.30"
rustls-pemfile = "2.1.2"

flume = "0.11"
futures = "0.3.5"
git-version = "0.3.5"
lazy_static = "1.4.0"
ts-rs = { version = "9.0", features = [
    "serde-compat",
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings"
] }
tracing = "0.1"
schemars = { version = "0.8.12", features = ["either"] }
serde = { version = "1.0.154", default-features = false, features = [
    "derive",
] } # Default features are disabled due to usage in no_std crates
serde_json = "1.0.114"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
    "plugins",
], version = "1.0.0-dev" }
zenoh_backend_traits = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.0.0-dev" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.0.0-dev" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.0.0-dev" }
zenoh-result = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.0.0-dev" }
uuid = { version = "1.3.0", default-features = false, features = [
    "v4",
    "serde",
] }
uhlc = { version = "0.8.0", default-features = false } # Default features are disabled due to usage in no_std crates

[build-dependencies]
rustc_version = "0.4.0"
schemars = { version = "0.8.12", features = ["either"] }
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
serde_json = "1.0.114"
jsonschema = { version = "0.18.0", default-features = false }

[package.metadata.deb]
name = "zenoh-plugin-remote-api"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2024 ZettaScale Technology"
section = "net"
license-file = ["../../LICENSE", "0"]
depends = "zenohd (=0.11.0-dev-1)"
